# aoc2024

./: CMakeLists.txt  LICENSE  README.md
include/: AocUtils.h
src/: main.cpp
src/day01/: day01.cpp  day01.h
src/day02/: day02.cpp  day02.h
src/day03/: day03.cpp  day03.h
